--- a/src/Bdaya.Abp.MongoDBMigrator.csproj
+++ b/src/Bdaya.Abp.MongoDBMigrator.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<LangVersion>latest</LangVersion>
-		<Version>0.1.0</Version>
+		<Version>0.2.0</Version>
 		<NoWarn>$(NoWarn);CS1591</NoWarn>
 		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>enable</Nullable>
+		<PackageIcon>icon.jpg</PackageIcon>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="../icon.jpg" Pack="true" Visible="false" PackagePath="" />
